--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,6 +1,7 @@
 $primary: #ff6875;
 
-$text-color: #9b88d2;
+$text-color: #8575b4;
+$title-color: rgb(186, 173, 224);
 
 $background: #2c263d;
 $background-dark: #231f30;
